--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -18,7 +18,7 @@
 
     <form action="{{ url_for('user_homepage') }}" method="POST">
         <div style="padding: 10px;">
-            <h3>Accept or Reject for Invigilation Slot</h3>
+            <h3>Confirm or Decline Invigilation Slot</h3>
             <div class="user-table-container">
                 <table class="user-data-table">
                     <thead>
