--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -3,7 +3,7 @@
 {% block head_title %}<h2>Own Timetable</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <div class="user-table-container" style="max-height: None;">    
+    <div class="user-table-container" style="max-height: None; margin: 0px;">    
         <table class="user-data-table" border="1">
             <thead>
                 <tr>
@@ -45,5 +45,11 @@
     </div>
 </div>
 {% endblock %}
+
+
+
+
+
+
 
 
