--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -48,7 +48,7 @@
             </div>
             <div class="form-middle">
                 <label>Level</label>
-                <select name="venueFloor" required>
+                <select name="venueLevel" required>
                     <option value="" disabled selected>Level</option>
                     <option value="LEVEL 2">LEVEL 2</option>
                     <option value="LEVEL 3">LEVEL 3</option>
