--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -55,6 +55,7 @@
                         Data should begin from columns <b>A to I</b>, with headers as follows:<br><br>
                         <i>['Date', 'Day', 'Start', 'End', 'Program', 'Course/Section', 'Lecturer', 'No. of Students', 'Room']</i><br><br>
                         You may also download the exam template using the link above.<br><br>
+                        Format: Date in <b>MM/DD/YYYY</b> format, and Start & End times in <b>hh:mm AM/PM</b> format (e.g. 8:00 AM).<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
                     </div><br>
                     <div id="examSelectedFileName" class="file-name-display"></div>
