--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -29,7 +29,7 @@
                     <p class="dashboard-text" style="color:#47AEF5;">{{ hoss|length }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Dean/HOS</h3>
+                    <h3>Total Dean</h3>
                     <p class="dashboard-text" style="color:#cf8223;">{{ deans|length }}</p>
                 </div>
             </div>
