--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -5,6 +5,7 @@
 <div class="menu-section">
     <div class="user-table-container" style="max-height: None; margin: 0px;">    
         <table class="user-data-table" border="1">
+            <h3>Timetable for {{ user_name }}</h3>
             <thead>
                 <tr>
                     <th>Day / Time</th>
