--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -114,7 +114,7 @@
                                 {% if att.invigilationStatus == 1 %}
                                     <span class="status frame-green">Accepted</span>
                                 {% else %}
-                                    <span class="status frame-red">Pending</span>
+                                    <span class="status frame-oren">Pending</span>
                                 {% endif %}
                             </td>
                         </tr>
