--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -1,6 +1,6 @@
 {% extends "user/userBase.html" %}
 {% block title %}Timetable{% endblock %}
-{% block head_title %}<h2>Merge Timetable</h2>{% endblock %}
+{% block head_title %}<h2>{{ user_department }} - Merge Timetable</h2>{% endblock %}
 
 {% block content %}
 <div class="menu-section">
