--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -15,7 +15,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="user-info">
-            {{ user_name }} | {{ user_id }} | Admin of {{ user_department }} | <i><span class="user-info" id="current-datetime"></span></i>
+            {{ user_name }} [{{ user_id }}] | Admin of {{ user_department }} | <i><span class="user-info" id="current-datetime"></span></i>
         </div>
     </header>
 
