--- a/app/templates/user/userBase.html
+++ b/app/templates/user/userBase.html
@@ -13,7 +13,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="user-info">
-            {{ user_name }} | {{ user_id }} | 
+            {{ user_name }} [{{ user_id }}] | 
                 {% if user_level == 1 %} LECTURER
                 {% elif user_level == 2 %} DEAN
                 {% elif user_level == 3 %} HOS
